# langchain-study

./: README.md  a.py  aireposnse.txt  gemini.py  pyproject.toml  requirements.txt
1-tools/: weather_tool.py
2-agents/: agentsmultipletools.py
2-tools/: building_agents_and_tool.py
3-agents/: agentsmultipletools.py
3-messages/: buildin_message_prompt.py  dynamical_prompts.py  message_prompt.py
4-structured_output/: dataclass_structured.py  nested_pydantic_structured.py  pydantic_structured_output.py  typedict_structured.py
5-memory/: short_term_memory.py
6-middleware/: summerization_middleware.py  summerization_with_tool.py
7-langchain_chain/: conditional_chain.py  sequential_chain.py  simple_chian.py
